--- a/src/components/home/categories.scss
+++ b/src/components/home/categories.scss
@@ -3,6 +3,7 @@
 .categoriesContainer {
   background-color: #f0f0f0;
   padding: 10%;
+  padding-top: 7%;
 
   // React-slick classes
   .slick-dots {
