--- a/src/components/products/style.scss
+++ b/src/components/products/style.scss
@@ -12,7 +12,7 @@
 
   h1 {
     position: relative;
-    padding: 40px;
+    padding: 40px 40px 20px 80px;
 
     &::before {
       content: "";
@@ -21,9 +21,8 @@
       width: 50px;
       height: 3px;
       background-color: #555a63;
-      position: absolute;
-      left: -60px;
-      top: 50%;
+      left: 20px;
+    top: 60%;
     }
   }
 }
