--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -7,7 +7,7 @@ $searchBlockIndex: 105;
   background-color: white;
   margin: auto;
   height: 100px;
-  position: absolute;
+  position: fixed;
   display: flex;
   justify-content: center;
   align-items: center;
