--- a/src/components/common/_variables.scss
+++ b/src/components/common/_variables.scss
@@ -21,3 +21,14 @@
     }
   }
 }
+
+@mixin resetAnchorHover($color, $colorHovered) {
+  &:hover a {
+    color: $colorHovered !important;
+  }
+
+  a {
+    text-decoration: none !important;
+    color: $color !important;
+  }
+}
