--- a/src/components/home/categories.scss
+++ b/src/components/home/categories.scss
@@ -4,6 +4,7 @@
   background-color: #f0f0f0;
   padding: 10%;
   padding-top: 7%;
+  color: black;
 
   // React-slick classes
   .slick-dots {
@@ -31,7 +32,6 @@
 }
 
 .categoryTitle {
-  font-family: "Lato", sans-serif;
   position: relative;
   font-size: 39px;
   color: #2c3648;
@@ -50,6 +50,10 @@
     left: 0;
     top: 50%;
   }
+}
+
+.cardWrapper {
+  @include resetAnchorHover(initial, initial);
 }
 
 .card {
@@ -104,6 +108,7 @@
 @include media(phone) {
   .categoryTitle {
     font-size: 25px;
+
     &::before {
       display: none;
     }
