Quick edit: change from rgb to hex for consistency

--- a/src/components/layout/footer/Footer.scss
+++ b/src/components/layout/footer/Footer.scss
@@ -7,7 +7,7 @@ $twitterHoverColor: #00acee !important;
 $googleHoverColor: #c52d27 !important;
 $githubHoverColor: #211f1f !important;
 $facebookHoverColor: #3b5998 !important;
-$fadedWhiteBright: rgb(229, 226, 226);
+$fadedWhiteBright: #e5e2e2 !important;
 
 .footerWrapper * {
   margin: 0;
