Create: create mixins folder

--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -1,4 +1,4 @@
-@import "../../common/variables";
+@import "../../common/mixins";
 
 // Fixed Navbar always will be shown over other components except HamburgerIcon, Search and SignUpModal elements.
 $navbarIndex: 102;
