--- a/src/components/layout/nav/signup/SignUp.scss
+++ b/src/components/layout/nav/signup/SignUp.scss
@@ -1,4 +1,4 @@
-@import "../../../common/variables.scss";
+@import "../../../common/mixins";
 
 $rightBorderRounded: 0.25rem 0 0 0.25rem;
 $leftBorderRounded: 0 0.25rem 0.25rem 0;
