--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -5,6 +5,20 @@ $navbarIndex: 102;
 $hamburgerIconIndex: 103;
 $closeSignUpIconIndex: 105;
 
+body a {
+  text-decoration: none;
+  color: black;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.navbarWithBackground {
+  background-color: #464b5b;
+  position: sticky;
+}
+
 .navbar {
   display: flex;
   height: 100px;
@@ -58,6 +72,7 @@ $closeSignUpIconIndex: 105;
     justify-content: center;
     align-items: center;
     margin-left: 20px;
+    margin-right: 30px;
     padding: 10px 5px 10px 5px;
 
     .iconWrapper {
