--- a/src/components/profilePage/style.scss
+++ b/src/components/profilePage/style.scss
@@ -3,14 +3,26 @@
   height: 100px;
   background-color: #05225a;
   color: white;
-  font-size: 33px;
-  padding-top: 15px;
 }
 .useOrderList {
   text-align: justify;
-  margin: 0 auto;
+  margin-left: 50px;
   display: flex;
   justify-content: space-around;
+  width: 300px;
+  align-items: center;
+    height: 100%;
+
+  .anchorFavorite {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: 30px;
+    font-size: 1.5rem !important;
+    text-align: center;
+    border-right: 3.5px solid rgb(231, 219, 219);
+    border-left:3.5px solid rgb(231, 219, 219);
+  }
 }
 
 .userProfileItems {
@@ -18,17 +30,4 @@
   font-size: 16px;
   display: flex;
   margin-bottom: 50px;
-}
-.vl {
-  position:absolute;
-    top:125%;
-    left:59%;
-  margin: 0;
-   -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
-  border-left: 3px solid #05225a ;
-  height: 700px;
-  position: absolute;
-  //left: 59%;
-  //margin-left: -3px;
 }
