--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -128,7 +128,12 @@ $headerHeightOnPhone: 860px;
     padding-left: 2rem;
     padding-right: 2rem;
 
-    @include resetAnchorHover($buttonSignUp, $buttonSignUp);
+    &:hover {
+      background-color: $buttonSignUp;
+      border-color: $buttonSignUp;
+    }
+
+    @include resetAnchorHover($buttonSignUp, $buttonGetStarted);
   }
 
   .buttonSignUp {
@@ -137,6 +142,11 @@ $headerHeightOnPhone: 860px;
     color: $buttonGetStarted;
     padding-left: 3rem;
     padding-right: 3rem;
+
+    &:hover {
+      background-color: $buttonGetStarted;
+      border-color: $buttonGetStarted;
+    }
 
     @include resetAnchorHover($buttonGetStarted, $buttonSignUp);
   }
