changing navbar background onScroll

--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -16,7 +16,12 @@ body a {
 
 .navbarWithBackground {
   background-color: #464b5b;
-  position: sticky;
+}
+
+.navbarWithBackgroundOnScroll {
+  background-color: #198900;
+  box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.25),
+    -6px -6px 20px rgba(255, 255, 255, 0.25);
 }
 
 .navbar {
