--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -19,9 +19,7 @@ body a {
 }
 
 .navbarWithBackgroundOnScroll {
-  background-color: #198900;
-  box-shadow: 1px 3px 20px rgba(0, 0, 0, 0.25),
-    -6px -6px 20px rgba(255, 255, 255, 0.25);
+  background-color: #464b5b;
 }
 
 .navbar {
