Change: import only one Footer and adjust padding of productPage

--- a/src/components/singleProductPage/singleProductDetails.scss
+++ b/src/components/singleProductPage/singleProductDetails.scss
@@ -1,5 +1,10 @@
 @import "../common/mixins";
 
+.productDetailsContainer {
+  padding-top: 120px;
+  padding-bottom: 100px;
+}
+
 .productDetailsRow {
   margin-bottom: 5%;
 }
