--- a/src/components/profile/userFavoriteList/style.scss
+++ b/src/components/profile/userFavoriteList/style.scss
@@ -1,9 +1,10 @@
-.DownSection {
+.downSection {
   width: 100vw;
   height: 100px;
   background-color: #05225a;
   color: white;
 }
+
 .useOrderList {
   text-align: justify;
   margin-left: 50px;
