--- a/src/components/blog/style.overview.scss
+++ b/src/components/blog/style.overview.scss
@@ -13,6 +13,11 @@
   padding: 5px 30px;
 }
 
+.overviewContainer {
+  margin-top: 40px;
+  height: 100vh;
+}
+
 .blogHeader {
   background-color: #ecebe4;
   width: 100%;
@@ -159,4 +164,8 @@
       display: none;
     }
   }
+}
+
+.overviewCardCol {
+  margin-bottom: 200px;
 }
