--- a/src/components/singleProductPage/singleProductDetails.scss
+++ b/src/components/singleProductPage/singleProductDetails.scss
@@ -83,7 +83,7 @@
   .productPrice {
     grid-row: 1/2;
     grid-column: 11/12;
-    font-weight: 600;
+    font-weight: 300;
     font-size: 25px;
   }
 
@@ -102,21 +102,48 @@
   }
 
   .productQuantity {
+    align-self: center;
     grid-row: 4/6;
     grid-column: 1/4;
     border: none;
     width: 60%;
     height: 60%;
     background-color: #ecebe4;
+    text-align: center;
+
   }
+
+    // To hide the input arrows 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.quantityIncAndDecBtns{
+  display: flex;
+  flex-direction: column;
+  grid-row: 4/6;
+  grid-column: 2;
+
+  button{
+    background-color:#ecebe4;
+  border: none;
+
+  }  
+
+}
 
   .quantity {
     grid-row: 4;
     grid-column: 2/4;
     font-size: 120%;
+    padding-top: 20px;
+    padding-left: 25px;
   }
 
   .productSizes {
+    align-self: center;
     background-color: #ecebe4;
     border: none;
     grid-row: 4/6;
@@ -159,8 +186,8 @@
     width: 100%;
     height: 30px;
     border: none;
-    border-bottom: solid 2px #c4c4c490;
-    border-right: solid 2px #c4c4c490;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
+    -1px -1px 10px rgba(255, 255, 255, 0.25);
   }
 
   .commentBtn {
@@ -172,8 +199,8 @@
     width: 100%;
     height: 30px;
     border: none;
-    border-bottom: solid 2px #c4c4c490;
-    border-left: solid 2px #c4c4c490;
+    box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
+    -1px -1px 10px rgba(255, 255, 255, 0.25);
   }
 }
 
@@ -299,11 +326,13 @@
 
 @include media(phone) {
   .productInfoContainer {
-    height: 40vh;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
   }
 
   .productInfo {
-    height: 90%;
+    height: 50%;
 
     .addToCartBtn {
       width: 100%;
@@ -320,14 +349,24 @@
       margin-left: -25%;
     }
   }
+
+  .productImgs {
+    width: 100%;
+    margin-top:0;
+
+    .smallImgs {
+      width: 250%;
+    }
+
+    .slick-thumb li {
+      margin: 15%;
+      margin-bottom: 27%;
+      margin-left: 0;
+    }
+  }
 }
 
 @include media(phone-sm) {
-  .productInfoContainer {
-    display: flex;
-    flex-direction: column;
-    height: 70vh;
-  }
 
   .productInfo {
     margin: 2%;
@@ -364,18 +403,5 @@
     }
   }
 
-  .productImgs {
-    width: 100%;
-    margin: 0;
-
-    .smallImgs {
-      width: 250%;
-    }
-
-    .slick-thumb li {
-      margin: 15%;
-      margin-bottom: 27%;
-      margin-left: 0;
-    }
-  }
+  
 }
