--- a/src/components/singleProductPage/singleProductDetails.scss
+++ b/src/components/singleProductPage/singleProductDetails.scss
@@ -110,35 +110,34 @@
     height: 60%;
     background-color: #ecebe4;
     text-align: center;
-
   }
 
-    // To hide the input arrows 
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+  // To hide the input arrows
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 
-.quantityIncAndDecBtns{
-  display: flex;
-  flex-direction: column;
-  grid-row: 4/6;
-  grid-column: 2;
-
-  button{
-    background-color:#ecebe4;
-  border: none;
-
-  }  
-
-}
+  .quantityIncAndDecBtns {
+    display: flex;
+    flex-direction: column;
+    grid-row: 4/6;
+    grid-column: 2;
+    align-self: center;
+    button {
+      background-color: #ecebe4;
+      border: none;
+      width: 25px;
+    }
+  }
 
   .quantity {
     grid-row: 4;
     grid-column: 2/4;
     font-size: 120%;
     padding-top: 20px;
+    margin-left: 5px;
     padding-left: 25px;
   }
 
@@ -187,7 +186,7 @@ input::-webkit-inner-spin-button {
     height: 30px;
     border: none;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
-    -1px -1px 10px rgba(255, 255, 255, 0.25);
+      -1px -1px 10px rgba(255, 255, 255, 0.25);
   }
 
   .commentBtn {
@@ -200,7 +199,7 @@ input::-webkit-inner-spin-button {
     height: 30px;
     border: none;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.25),
-    -1px -1px 10px rgba(255, 255, 255, 0.25);
+      -1px -1px 10px rgba(255, 255, 255, 0.25);
   }
 }
 
@@ -346,13 +345,13 @@ input::-webkit-inner-spin-button {
 
     .quantity {
       font-size: 70%;
-      margin-left: -25%;
+      margin-left: 10px;
     }
   }
 
   .productImgs {
     width: 100%;
-    margin-top:0;
+    margin-top: 0;
 
     .smallImgs {
       width: 250%;
@@ -367,7 +366,6 @@ input::-webkit-inner-spin-button {
 }
 
 @include media(phone-sm) {
-
   .productInfo {
     margin: 2%;
 
@@ -402,6 +400,4 @@ input::-webkit-inner-spin-button {
       grid-row: 6/7;
     }
   }
-
-  
 }
