--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -1,5 +1,10 @@
 @import "../../common/mixins";
 
+@mixin flexCenter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 // Fixed Navbar always will be shown over other components except HamburgerIcon, Search and SignUpModal elements.
 $navbarIndex: 102;
 $hamburgerIconIndex: 103;
@@ -27,7 +32,7 @@ $navBarDefault: #464b5b;
   z-index: $navbarIndex;
 
   .collapseMenuItems {
-    width: 80%;
+    width: 90%;
     justify-content: flex-end;
   }
 
@@ -39,13 +44,16 @@ $navBarDefault: #464b5b;
       padding-left: 5px;
       padding-right: 5px;
       transition: font-size 0.3s ease-in-out;
+      @include flexCenter;
     }
   }
 
   .navbarLogo {
     position: absolute;
     max-width: 100px;
-    left: 100px;
+    left: 60px;
+    top: 50%;
+    transform: translateY(-50%);
     cursor: pointer;
   }
 
@@ -59,19 +67,71 @@ $navBarDefault: #464b5b;
   }
 
   .iconTrio {
-    width: 25%;
+    width: 40%;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
-    margin-right: 30px;
+    @include flexCenter;
+    margin-right: 10px;
     padding: 10px 5px 10px 5px;
 
     .iconWrapper {
       max-width: 35px;
-      margin-right: 8px;
+      margin-right: 12px;
       min-width: 18px;
+    }
+
+    .loggedInUserIconWrapper {
+      display: flex;
+      flex-wrap: nowrap;
+      order: 5;
+      background-color: #efe9e9;
+      border: 2px solid #8c8c92;
+      height: 40px;
+      border-radius: 3px;
+      color: $navBarDefault;
+      margin: 0;
+      padding: 0 10px;
+      min-width: 128px !important;
+
+      &:hover {
+        cursor: pointer;
+      }
+
+      .loggedInTabCol {
+        padding: 0;
+        flex-wrap: wrap;
+        @include flexCenter;
+
+        .loggedDefaultIcon {
+          font-size: 19px;
+        }
+
+        .loggedArrowIcon {
+          font-size: 15px;
+        }
+      }
+
+      .loggedInTextContainer {
+        flex-direction: column;
+        flex-wrap: nowrap;
+        padding: 4px 0;
+
+        .loggedInTabText {
+          margin: 0;
+          padding: 0;
+          @include flexCenter;
+        }
+
+        .loggedProfileText {
+          font-weight: 600;
+          font-size: 12px;
+          line-height: 12px;
+        }
+
+        .loggedUserName {
+          font-size: 10px;
+          line-height: 9px;
+        }
+      }
     }
 
     // FontAwesome classNames.
@@ -85,7 +145,6 @@ $navBarDefault: #464b5b;
 
   @include media(tablet) {
     .navbarItems {
-      width: 60%;
       margin-right: 20px;
     }
 
