--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -66,7 +66,8 @@ $searchBlockIndex: 105;
       }
     }
 
-    button {
+    .searchButton {
+      margin: 0;
       padding: 0;
       height: 100%;
       width: 100%;
