--- a/src/components/profile/general/GeneralSection.scss
+++ b/src/components/profile/general/GeneralSection.scss
@@ -7,6 +7,7 @@
   justify-content: center;
   background-size: cover;
   background-position: 0 35%;
+  margin-top: 100px;
 
   .userSectionWrapper {
     width: 50%;
