fixing responsive design of the product section

--- a/src/components/products/style.scss
+++ b/src/components/products/style.scss
@@ -3,6 +3,7 @@
 .productsSectionContainer {
   margin-bottom: 50px;
   padding-top: 8%;
+  margin-left: 100px;
 
   @include resetAnchorHover(initial, initial);
 
@@ -25,9 +26,19 @@
   }
 }
 
+@include media(tablet) {
+  .productsSectionContainer {
+    margin-left: -10px;
+  }
+}
+
 @include media(tablet-sm) {
+  .productsSectionContainer {
+    margin-left: -40px;
+  }
   .productsTitle {
     font-size: 30px !important;
+    margin-left: 70px;
 
     &::before {
       left: 0px !important;
@@ -36,6 +47,9 @@
 }
 
 @include media(phone) {
+  .productsSectionContainer {
+    margin-left: 50px;
+  }
   .productsTitle {
     font-size: 25px !important;
     padding-left: 150px !important;
@@ -47,6 +61,9 @@
 }
 
 @include media(phone-sm) {
+  .productsSectionContainer {
+    margin-left: -40px;
+  }
   .productsTitle {
     padding-left: 120px !important;
   }
