--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -63,17 +63,28 @@ $closeSignUpIconIndex: 105;
     }
   }
 
-  .navbarLogo {
+  .navbarLogoWrapper {
     position: absolute;
-    max-width: 100px;
-    left: 60px;
+    width: 150px;
+    height: 100%;
+    display: flex;
+    left: -80px;
+    align-items: center;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
+
+    .navbarLogo {
+      background: url("../../../assets/svgs/katara_logo.svg") no-repeat;
+      color: white;
+      width: 100%;
+      height: 35px;
+    }
   }
 
   .navbarItemWrapper {
     text-align: center;
+    position: relative;
 
     a {
       text-decoration: none;
