--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -67,9 +67,8 @@ $closeSignUpIconIndex: 105;
     position: absolute;
     width: 150px;
     height: 100%;
-    display: flex;
+    @include flexCenter;
     left: -80px;
-    align-items: center;
     top: 50%;
     transform: translateY(-50%);
     cursor: pointer;
@@ -99,11 +98,11 @@ $closeSignUpIconIndex: 105;
   }
 
   .iconTrio {
-    width: 40%;
+    width: 30%;
     position: relative;
     @include flexCenter;
-    margin-right: 10px;
-    padding: 10px 5px 10px 5px;
+    justify-content: flex-end;
+    padding: 10px 30px 10px 5px;
 
     .shoppingCartIconContainer {
       height: 22px;
@@ -189,6 +188,11 @@ $closeSignUpIconIndex: 105;
       font-size: 95%;
     }
 
+    .navbarLogo {
+      height: 25px;
+      width: 100px;
+    }
+
     .fas,
     .fab {
       font-size: 125%;
@@ -204,14 +208,18 @@ $closeSignUpIconIndex: 105;
 @include media(tablet-sm) {
   .navbar {
     width: 200px;
-    height: 100vh;
-    min-height: 100vh;
+    height: 100%;
+    min-height: 100%;
     right: 0;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: transparent;
     padding: 0;
+
+    .navbarItems {
+      margin: 0;
+    }
 
     .collapseMenuItems {
       align-items: center;
@@ -231,6 +239,10 @@ $closeSignUpIconIndex: 105;
         transform: translateX(0px);
         width: 100%;
       }
+    }
+
+    .hamburgerContainer {
+      background-color: transparent;
     }
 
     .hamburgerContainer {
@@ -276,8 +288,17 @@ $closeSignUpIconIndex: 105;
       }
     }
 
-    .navbarLogo {
-      bottom: 20px;
+    .navbarLogoWrapper {
+      height: 40px;
+      bottom: 0;
+      top: auto;
+      left: auto;
+
+      .navbarLogo {
+        bottom: 20px;
+        height: 25px;
+        width: 110px;
+      }
     }
 
     .navbarItems {
@@ -289,6 +310,10 @@ $closeSignUpIconIndex: 105;
       .navLinkCol {
         border-bottom: 0.1px solid #f5deb378;
         transition: all 1.5s ease-in-out;
+
+        .navLinkWrapper {
+          @include flexCenter;
+        }
 
         // Add border-top to the first side-nav item to tell them apart.
         &:nth-of-type(1) {
@@ -304,7 +329,6 @@ $closeSignUpIconIndex: 105;
           display: block;
           width: 100%;
           height: 100%;
-          padding-top: 10px;
         }
       }
     }
@@ -316,6 +340,12 @@ $closeSignUpIconIndex: 105;
       height: 50px;
       margin: 0 auto;
       margin-bottom: 30px;
+      padding: 0;
+      justify-content: center;
+
+      .languageIconWrapper {
+        margin: 0;
+      }
 
       .fas,
       .fab {
@@ -351,5 +381,24 @@ $closeSignUpIconIndex: 105;
   @include media(tablet-sm) {
     top: calc(50% - 240px);
     right: calc(50% - 150px);
+  }
+}
+
+@include media(phone-sm) {
+  .navbar {
+    width: 100%;
+
+    .iconWrapper {
+      margin-right: 20px !important;
+
+      .navbarIcon {
+        font-size: 30px !important;
+      }
+
+      .shoppingCartLockedSvg {
+        height: 30px;
+        width: 33px;
+      }
+    }
   }
 }
