--- a/src/components/layout/nav/search/Search.scss
+++ b/src/components/layout/nav/search/Search.scss
@@ -7,7 +7,7 @@ $searchBlockIndex: 105;
   background-color: white;
   margin: auto;
   height: 100px;
-  position: fixed;
+  position: fixed !important;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -151,7 +151,7 @@ $searchBlockIndex: 105;
       position: absolute;
       top: 0;
       left: 0;
-      width: 100vw;
+      width: 100%;
       height: 100%;
     }
 
@@ -185,5 +185,15 @@ $searchBlockIndex: 105;
     .searchPreview {
       display: none;
     }
+  }
+
+  .hamburgerContainerWithSearch {
+    top: 90px !important;
+    right: 20px !important;
+  }
+
+  .iconTrio {
+    margin: 0 !important;
+    margin-top: 50px !important;
   }
 }
