Fix: fix responsive of navbar

--- a/src/components/layout/nav/Navbar.scss
+++ b/src/components/layout/nav/Navbar.scss
@@ -400,5 +400,9 @@ $closeSignUpIconIndex: 105;
         width: 33px;
       }
     }
+
+    .languageIconWrapper {
+      margin: 0 !important;
+    }
   }
 }
