--- a/src/components/auth/signUp/signUp.scss
+++ b/src/components/auth/signUp/signUp.scss
@@ -1,12 +1,13 @@
 .signUpContainer {
-  font-family: Lato;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #4a4e69;
+  padding-top: 80px;
+  padding-bottom: 100px;
 }
 
 .signUpForm {
@@ -24,8 +25,6 @@
   .signUpTitle {
     display: flex;
     justify-content: center;
-    font-family: "Segoe UI", "Ubuntu", "Roboto", "Open Sans", "Helvetica Neue",
-      sans-serif;
     font-size: 2em;
     font-weight: lighter;
     margin-top: 0.25em;
