--- a/src/components/home/categories.scss
+++ b/src/components/home/categories.scss
@@ -32,6 +32,7 @@
 }
 
 .categoryTitle {
+  text-transform: uppercase;
   position: relative;
   font-size: 39px;
   color: #2c3648;
@@ -88,6 +89,7 @@
 }
 
 .cardTitle {
+  text-transform: uppercase;
   position: absolute;
   bottom: 20px;
   left: 0px;
